# Practica_2

./: .gitignore  CMakeLists.txt  README.md  funciones.cpp  funciones.h  main.cpp
